--- a/resources/assets/js/lang/en.json
+++ b/resources/assets/js/lang/en.json
@@ -59,5 +59,6 @@
   "no_match_found" : "No match found",
   "delete_item_confirm": "Are you sure you want to delete this item?",
   "delete_items_confirm": "Are you sure you want to delete selected items?",
-  "delete_done": "The information was successfully deleted!!"
+  "delete_done": "The information was successfully deleted!!",
+  "welcome": "Welcome!"
 }
