--- a/resources/assets/js/lang/ru.json
+++ b/resources/assets/js/lang/ru.json
@@ -59,5 +59,6 @@
   "no_match_found": "Совпадение не найдено!",
   "delete_item_confirm": "Вы действительно хотите удалить данный элемент?",
   "delete_items_confirm": "Вы действительно хотите удалить выбранные элементы?",
-  "delete_done": "Информация была удалена!"
+  "delete_done": "Информация была удалена!",
+  "welcome": "Добро пожаловать!"
 }
