--- a/resources/assets/js/lang/ru.json
+++ b/resources/assets/js/lang/ru.json
@@ -60,5 +60,6 @@
   "delete_item_confirm": "Вы действительно хотите удалить данный элемент?",
   "delete_items_confirm": "Вы действительно хотите удалить выбранные элементы?",
   "delete_done": "Информация была удалена!",
-  "welcome": "Добро пожаловать!"
+  "welcome": "Добро пожаловать!",
+  "dark_theme": "Темная тема"
 }
