--- a/resources/assets/js/lang/en.json
+++ b/resources/assets/js/lang/en.json
@@ -48,6 +48,7 @@
   "strings": "Strings",
   "search_input": "Find item",
   "position": "Position",
+  "department": "Department",
   "phone_number": "Phone_number",
   "salary": "Salary",
   "address": "Address",
