--- a/resources/assets/js/lang/en.json
+++ b/resources/assets/js/lang/en.json
@@ -48,7 +48,9 @@
   "strings": "Strings",
   "search_input": "Find item",
   "position": "Position",
+  "positions": "Positions",
   "department": "Department",
+  "departments": "Departments",
   "phone_number": "Phone_number",
   "salary": "Salary",
   "address": "Address",
@@ -64,5 +66,15 @@
   "delete_items_confirm": "Are you sure you want to delete selected items?",
   "delete_done": "The information was successfully deleted!!",
   "welcome": "Welcome!",
-  "dark_theme": "Dark theme"
+  "dark_theme": "Dark theme",
+  "actions": "Actions",
+
+  "nav-main": "Dashboard",
+  "nav-organization": "Organization",
+  "nav-clients": "Clients",
+  "nav-tours": "Tours",
+  "nav-providers": "Providers",
+  "nav-calendar": "Calendar",
+  "nav-chat": "Chat",
+  "nav-help": "Help"
 }
