--- a/resources/assets/js/lang/ru.json
+++ b/resources/assets/js/lang/ru.json
@@ -69,6 +69,7 @@
   "positions": "Должности",
   "department": "Подразделение",
   "departments": "Подразделения",
+  "passport": "Паспорт",
 
   "birthday": "День рождения",
   "add_image": "Добавить изображение",
@@ -85,6 +86,17 @@
   "welcome": "Добро пожаловать!",
   "dark_theme": "Темная тема",
 
+  "edit_tour": "Изменить тур",
+  "new_tour": "Новый тур",
+
+  "title": "Наименование",
+  "service": "Вид услуги",
+  "transport": "Транспорт",
+  "visa_service": "Визовые услуги",
+  "accommodation": "Проживание в отеле",
+  "days": "Дней",
+  "price": "Цена",
+
   "nav-main": "Главная",
   "nav-organization": "Организация",
   "nav-balance": "Баланс",
@@ -94,5 +106,11 @@
   "nav-providers": "Поставщики",
   "nav-calendar": "Календарь",
   "nav-chat": "Чат",
-  "nav-help": "Помощь"
+  "nav-help": "Помощь",
+
+  "tours-archive": "Архив туров",
+  "clients-archive": "Архив клиентов",
+  "tour": "Тур",
+  "departure_date": "Дата отправления",
+  "arrival_date": "Дата прибытия"
 }
